- Ethna_Plugin::import という，プラグインソースをincludeするための，staticメソッドを追加．
- すべてのPluginの基底となる抽象クラス，Ethna_Plugin_Abstractを追加
-- 既存のプラグインの親クラスを，Ethna_Plugin_Abstract を継承するように変更
-- Plugin に設定を受け渡す方法を変更したため，etcのskelを変更
--- それに伴い，Ethna_Plugin_Cachemanager_Memcacheの設定方法を変更
- Ethna_Plugin_Cachemanager に config からデフォルト の namespace を指定可能とした

*** bug fix

- ethna make-plugin-package のデフォルトインストールディレクトリが誤っていたバグを修正
- iniディレクティブ date.timezone が設定されてないために、E_WARNING が PHP 5.3.0 で出ていたバグを修正
- Ethna_Plugin::includePlugin メソッドの実装が動作するものではなかったので変更
- Ethna_Plugin_Cachemanager のクラスのプロパティに指定する $namespace が意味をなしていなかったので修正 (#17753)
- PROJECT_DIR/lib/Ethna/extlib 以下にファイルを設置するタイプのプラグインを pear-local などでインストールすると、それ以後
  ethnaコマンドが使えなくな問題を修正
- 新しいプラグインの命名規則に従っていない古いプラグインを別物として読み込もうとしてクラス名がかぶる問題を修正(#17875) thanks: id:okonomi
- 存在しない(or 削除された) ethnaコマンドを指定すると Fatal Error が起きるバグを修正 (thanks:kondo_)
-- http://sourceforge.jp/ticket/browse.php?group_id=1343&tid=17894

** 2.5.0-preview5

*** features

- フォーム定義に関する変更
-- フォーム定義を動的に変更するためのAPIをさらに追加
-- Ethna_ActionForm#setFormDef_ViewHelper
- APPID_Controller.php のスケルトンに継承を想定したメソッドを追加
-- skel/app.controller.php _setDefaultTemplateEngin
- add-project 時の www 以下に出来るエントリポイントから APPID_Controller へのパスを相対パスに変更
- ethna コマンドの挙動変更
-- ethna help コマンドを追加
- 指定 Action が存在しない場合、app/action 以下を全て include する仕様を変更
-- include せず、fallback用のactionを実行する
- add-project -b オプションの挙動変更
- controller での smarty_xx_plugin の機能を削除
- ビューまわりの変更
-- Ethna_ActionClass から、Ethna_ViewClass#preforward に引数を渡せるようにした
--- return array('forward_name', $params); の形式で渡せば、$params が preforwardの引数として渡される
-- 汎用ビュークラスを実装
--- ビューへの出力時によく使われる処理を雛形として実装したもの
--- Ethna_View_Json.php
--- Ethna_View_403.php
--- Ethna_View_404.php
--- Ethna_View_500.php
--- Ethna_View_Redirect.php
---- アクションクラスで return array('redirect', 'http://example.com');
     とすれば http://example.com にリダイレクトされる
-- レイアウトテンプレートを実装
--- HTMLの外側に当たる雛形のテンプレートを描くためのもの。各アクションの出力はこのテンプレートの出力でラップされる
--- デフォルトは template/{locale_name}/layout.tpl に置かれている。